# aiida-dmrg

./: README.md  pyproject.toml
.github/workflows/: build.yml  publish.yml
aiida_dmrg/: __init__.py  version.py
aiida_dmrg/calculations/: __init__.py  dmrggen.py  dynamcor.py  dyncorr_calc.py
aiida_dmrg/parsers/: dmrg.py  dmrggen.py  dynamcor.py  dyncorr_parser.py
aiida_dmrg/utils/: dmrg.py
aiida_dmrg/workchains/: __init__.py  base.py  dynamcor.py  dynamcorr_workchain.py  dyncorr_workchain.py  jovyan.code-workspace
examples/: example_01_simple.py  example_02_dyncorr.py  example_02_matrix_input.py  example_03_dyncorr.py
tests/: __init__.py  conftest.py
tests/calculations/: test_dmrg_calc.py  test_dyncorr_calc.py
tests/parsers/: test_dmrg.py  test_dyncorr.py
